fix: 경기일정 날짜 개행 white space nowrap 처리

--- a/assets/css/sub.css
+++ b/assets/css/sub.css
@@ -885,6 +885,7 @@
   align-items: center;
   font-size: 1.8rem;
   line-height: 2.3rem;
+  white-space: nowrap;
 }
 .championship-wrapper .schedule-item .date-place .date::before {
   content: '';
